CMBSandbox4/src/objects/RequestforEstimate__c.object
<CustomObject>
    <fields>
        <fullName>Client_Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Date__c</fullName>
        <label>Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Timeframe__c</fullName>
        <label>Estimated Timeframe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Request for Estimates</relationshipLabel>
        <relationshipName>Request_for_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Request for Estimates</relationshipLabel>
        <relationshipName>Request_for_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Not Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Waiting on Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented - Waiting on Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented - On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Request for Estimates</relationshipLabel>
        <relationshipName>Request_for_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Request for Estimates</relationshipLabel>
        <relationshipName>Request_for_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request for Estimate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFEs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>